@@ -8,7 +8,7 @@
 //'
 //' @title Run a lars / lasso / elasticNet regression
 //' @param matX A matrix of explanatory variables, i.e. regressors
-//' @param matY A matrix of target variables
+//' @param vecY A vector with the target variable
 //' @param testPoints A matrix of test values to validate prediction
 //' @param lambda1 A doube with l1-norm penalty regularization parameter
 //' @param lambda2 A doube with l2-norm penalty regularization parameter
@@ -16,9 +16,13 @@
 //' decomposition when solving the linear system, else full Gram matrix is used.
 //' @return A list with results
 //' @examples
-//'   # tbd
+//'   data(trainSet)
+//'   mat <- trainSet[, -5]
+//'   y <- trainSet[,5]
+//'   tst <- testSet[, -5]
+//'   res <- LARS(mat, y, tst, 0.5, 0.5)
 // [[Rcpp::export]]
-Rcpp::List LARS(arma::mat& matX, arma::mat& matY, const arma::mat& testPoints,
+Rcpp::List LARS(arma::mat& matX, arma::vec& vecY, const arma::mat& testPoints,
                 const double lambda1, const double lambda2,
                 bool useCholesky = false) {
 
@@ -26,21 +30,18 @@ Rcpp::List LARS(arma::mat& matX, arma::mat& matY, const arma::mat& testPoints,
     mlpack::regression::LARS lars(useCholesky, lambda1, lambda2);
 
     // Make sure y is oriented the right way.
-    if (matY.n_rows == 1)
-        matY = arma::trans(matY);
+    if (vecY.n_rows == 1)
+        vecY = arma::trans(vecY);
 
-    // Make sure y is oriented the right way.
-    if (matY.n_rows == 1)
-        matY = arma::trans(matY);
+    //if (vecY.n_cols > 1)
+    //    Rcpp::stop("Only one column or row allowed in responses file!");
 
-    if (matY.n_cols > 1)
-        Rcpp::stop("Only one column or row allowed in responses file!");
-
-    if (matY.n_elem != matX.n_rows)
+    if (vecY.n_elem != matX.n_rows)
         Rcpp::stop("Number of responses must be equal to number of rows of X!");
 
     arma::vec beta;
-    lars.Train(matX, matY.unsafe_col(0), beta, false /* do not transpose */);
+    //lars.Train(matX, matY.unsafe_col(0), beta, false /* do not transpose */);
+    lars.Train(matX, vecY, beta, false /* do not transpose */);
 
     // TODO: test for having test data
     //Log::Info << "Regressing on test points." << endl;
