@@ -1,6 +1,7 @@
 2018-02-10  Dirk Eddelbuettel  <edd@debian.org>
 
-	* src/LARS.cpp: Completed roxygen docs of variables
+	* src/LARS.cpp: Completed roxygen docs of variables, added simple
+	example
 	* man/LARS.Rd: Idem
 
 	* src/init.c: Removed, now auto-generated in RcppExports.cpp
